add topic create

--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -64,6 +64,9 @@ $(function() {
 
   </div>
   <div id="dashboard-right" class="span4">
+    <div class="well">
+        <a href="<%= new_user_topic_path(current_user) %>" class="btn btn-primary"><i class="iconfa-plus icon-white"></i> 创建新问题</a>
+    </div>
     <div class="widgetbox">
                             <h4 class="widgettitle">热门关键词<a class="minimize">&#8211;</a></h4>
                             <div class="widgetcontent">
