Add training plan controller. For application layout, remove page header to save space.

--- a/app/views/shared/_leftmenu.html.erb
+++ b/app/views/shared/_leftmenu.html.erb
@@ -46,7 +46,7 @@
         <li class="<%= "active" if active == 'positions' %>"><a href="<%= admin_manage_position_path %>"><span class="iconfa-reorder"></span> <%= t('menu.admin.position') %></a></li>
         <li class="<%= "active" if active == 'exam' %>"><a href="<%= examinations_path %>"><span class="iconfa-certificate"></span> 考试管理</a></li>
         <li class="<%= "active" if active == 'teacher' %>"><a href="#myModal" data-toggle="modal"><span class="iconfa-user"></span> 讲师管理</a></li>
-        <li class="<%= "active" if active == 'plan' %>"><a href="#myModal" data-toggle="modal"><span class="iconfa-calendar"></span> 培训计划管理</a></li>
+        <li class="<%= "active" if active == 'plan' %>"><a href="<%= training_plans_path %>" data-toggle="modal"><span class="iconfa-calendar"></span> 培训计划管理</a></li>
         <li class="<%= "active" if active == 'assessments' %>"><a href="#myModal" data-toggle="modal"><span class="iconfa-signal"></span> 能力评估管理</a></li>
         <li class="<%= "active" if active == 'knowledage' %>"><a href="<%= knowledge_path %>"><span class="iconfa-rss"></span> 社区管理</a></li>
         <li class="<%= "active" if active == 'datamining' %>"><a href="<%= datamining_path %>"><span class="iconfa-bar-chart"></span> 统计中心</a></li>
