--- a/app/views/shared/_pageheader.html.erb
+++ b/app/views/shared/_pageheader.html.erb
@@ -7,6 +7,7 @@
   <%= yield :breadcrumbs %>
 </ul>
 
+<% if false %>
 <div class="pageheader">
   <form action="#" method="post" class="searchbar">
     <input type="text" name="keyword" placeholder= <%=t("course.all.notic3")  %> />
@@ -17,3 +18,4 @@
     <h1><%= yield(:page_title) %></h1>
   </div>
 </div><!--pageheader-->
+<% end %>
