--- a/app/views/feed_items/_comment.html.erb
+++ b/app/views/feed_items/_comment.html.erb
@@ -4,7 +4,9 @@ comment = feed_item.item
 topic = comment.commentable
 %>
 
-<li class="comment">
-  <p><%= link_to comment.user.name, comment.user %> add comment on <%= link_to topic.title, course %>.
-  <br/><small><%= "about " + distance_of_time_in_words_to_now(comment.created_at) + " ago" %></small></p>
-</li>
+<tr class="comment">
+  <td>
+    <p><%= link_to comment.user.name, comment.user %> 已经回复了 <%= link_to topic.title, topic %>.
+    <br/><small><%= distance_of_time_in_words_to_now(comment.created_at) + "前" %></small></p>
+  </td>
+</tr>
