--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -40,20 +40,29 @@
     </div>
     <% end %>
     <div class="well quest-answer-list">
-    <% if @topic.comments.size == 0 %>
+    <% if @comments.size == 0 %>
       <div class="nopadding">
         <div class="answer-sammary"> <h4>当前还没有人回复主题 </h4></div>
       </div> 
     <% else %>
       
-        <div class="answer-sammary"><h4><%= @topic.comments.size %>条回答</h4></div>
+        <div class="answer-sammary"><h4><%= @comments.size %>条回答</h4></div>
         <ul>
-          <% @topic.comments.each do | comment | %>
+          <% @comments.each do | comment | %>
           <% if ((comment.repcomment != nil) || (1073741823 == comment.repcomment_id)) %>
             <li> 
-              <div class="awswer-header"><%= link_to comment.user.name, user_path(comment.user.id) %> &#124; <span><i class="iconfa-time"></i> 发布于<%= distance_of_time_in_words_to_now(comment.created_at) %>前</span><span class="pull-right"><i class="iconfa-thumbs-up"></i> 0</span></div>
+              <div class="awswer-header"><%= link_to comment.user.name, user_path(comment.user.id) %> &#124; <span><i class="iconfa-time"></i> 发布于<%= distance_of_time_in_words_to_now(comment.created_at) %>前</span><span class="pull-right"><%= link_to "评论", "#" %>&#124;<i class="iconfa-thumbs-up"></i> 0</span></div>
               <p><%= comment.content %></p>
-              <div><span class="pull-right"></span></div>
+              <% unless current_user.admin? %>
+              <div class="well quest-input " style="display:none">
+                <%= form_tag  comments_path(:user_id => current_user.id, :topic_id => @topic.id, :repcomment_id => comment.id) do %>
+                <%= text_area_tag "content", nil, :rows => 4, :cols => 25, :placeholder => "提问者正期待您的回答..." %>
+                <div>
+                  <%= submit_tag  "提交回答",  :class => "btn btn-primary"  %>
+                </div>
+                <% end %>
+              </div>
+              <% end %>
             </li>
           <% end %>
           <% if comment.replies.size != 0 %>
