--- a/app/views/feed_items/_user_relation.html.erb
+++ b/app/views/feed_items/_user_relation.html.erb
@@ -5,9 +5,7 @@ leader = relation.leader
 follower = relation.follower
 %>
 
-<tr class="user">
-  <td>
-    <p><%= link_to follower.name, follower %> 已经关注了 <%= link_to leader.name, leader %>.
-    <br/><small><%= distance_of_time_in_words_to_now(relation.created_at) + "前" %></small></p>
-  </td>
-</tr>
+
+<i class="activity-icon iconfa-check"></i>
+<%= link_to follower.name, follower %> 已经关注了 <%= link_to leader.name, leader %>
+<span class="activity-time"><%= distance_of_time_in_words_to_now(relation.created_at) + "前" %></span>
