--- a/app/views/training_plans/index.html.erb
+++ b/app/views/training_plans/index.html.erb
@@ -1,2 +1,29 @@
-<h1>TrainingPlans#index</h1>
-<p>Find me in app/views/training_plans/index.html.erb</p>
+<% provide(:title, "培训计划管理") %>
+
+<% content_for :breadcrumbs do %>
+<%= content_tag(:li, "培训计划管理") %>
+<% end %>
+
+<% content_for :javascript do %>
+
+<% end %>
+
+<div class="row-fluid">
+  <div id="dashboard-left" class="span8">
+    <h4 class="widgettitle">所有培训计划</h4>
+    <div class="widgetcontent">
+      <ul>
+        <% @tps.each do |tp| %>
+        <li>
+          <%= tp.title %>
+        </li>
+        <% end %>
+      </ul>
+    </div>
+  </div>
+  <div id="dashboard-right" class="span4">
+    <div class="well">
+      <a href="<%= new_training_plan_path %>" class="btn btn-primary"><i class="iconfa-plus icon-white"></i> 创建培训计划</a>
+    </div>
+  </div>
+</div>
