--- a/app/assets/stylesheets/training_plans.css.scss
+++ b/app/assets/stylesheets/training_plans.css.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the TrainingPlans controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.tp-list {
+  padding: 0;
+  margin: 0;
+
+  td {
+    vertical-align: middle;
+  }
+}
