--- a/app/views/training_plans/index.html.erb
+++ b/app/views/training_plans/index.html.erb
@@ -11,15 +11,29 @@
 <div class="row-fluid">
   <div id="dashboard-left" class="span8">
     <h4 class="widgettitle">所有培训计划</h4>
-    <div class="widgetcontent">
-      <ul>
-        <% @tps.each do |tp| %>
-        <li>
-          <%= tp.title %>
-        </li>
-        <% end %>
-      </ul>
+    <% if @tps.size > 0 %>
+    <div class="widgetcontent nopadding">
+      <table class="table responsive tp-list">
+      <% @tps.each do |tp| %>
+      <tr>
+        <td><span class="label label-info"><%= tp.state ||= "unknow" %></span></td>
+        <td>
+          <%= link_to tp.title, training_plan_path(tp) %>
+          <span>计划参加人员: <%= tp.users.count %></span>
+          <span>必修课程：<%= tp.required_courses.count %></span>
+          <span>选修课程：<%= tp.optional_courses.count %></span>
+        </td>
+        <td><%= tp.created_at %></td>
+        <td><%= link_to "编辑", edit_training_plan_path(tp), :class => "btn btn-primary" %></td>
+      </tr>
+      <% end %>
+      </table>
     </div>
+    <% else %>
+    <div class="widgetcontent">
+      <p>还没有任何培训计划</p>
+    </div>
+    <% end %>
   </div>
   <div id="dashboard-right" class="span4">
     <div class="well">
