--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -107,7 +107,7 @@
     <h4 class="widgettitle">最近好友活动</h4>
     <div class="widgetcontent nopadding">
       <div class="a-header">
-      <% if @feed_items.empty? %>
+      <% if @feed_items.blank? %>
       <p> 目前没有消息</p>
       <% else %>
       <ul class="activity-list">
