--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -105,11 +105,12 @@
     </div>
 
     <h4 class="widgettitle">最近好友活动</h4>
-    <div class="widgetcontent nopadding">
-      <div class="a-header">
       <% if @feed_items.blank? %>
-      <p> 目前没有消息</p>
+      <div class="widgetcontent">
+      目前没有好友活动信息
+      </div>
       <% else %>
+      <div class="widgetcontent nopadding">
       <ul class="activity-list">
         <% @feed_items.each do |feed_item| %>
         <% next unless feed_item.item %>
@@ -120,7 +121,6 @@
       </ul>
       <% end %>
       </div>
-    </div>
                       
     <div class="divider30"></div>                      
   </div><!--span4-->
