--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -11,13 +11,8 @@
 <% content_for :javascript do %>
 <script type="text/javascript">
 function show_view(comment_id) {
-  if (document.getElementById('light_' + comment_id).style.display == 'block')
-  {
-    document.getElementById('light_' + comment_id).style.display ='none';
-  } else {
-    document.getElementById('light_' + comment_id).style.display ='block';
-  }
-  
+  var dispmode = document.getElementById('light_' + comment_id).style.display
+  document.getElementById('light_' + comment_id).style.display = (dispmode == 'block') ? 'none' : 'block'
 }
 </script>
 <% end %>
@@ -57,7 +52,7 @@ function show_view(comment_id) {
         <div class="answer-sammary"><h4><%= @comments.size %>条回答</h4></div>
         <ul>
           <% @comments.each do | comment | %>
-          <% if ((comment.repcomment != nil) || (1073741823 == comment.repcomment_id)) %>
+          <% if (1073741823 == comment.repcomment_id) %>
             <li> 
               <div class="awswer-header"><%= link_to comment.user.name, user_path(comment.user.id) %> &#124; <span><i class="iconfa-time"></i> 发布于<%= distance_of_time_in_words_to_now(comment.created_at) %>前</span><span class="pull-right"><%= link_to_function "评论", "show_view('#{comment.id}')" %>&#124;<i class="iconfa-thumbs-up"></i> 0</span></div>
               <p><%= comment.content %></p>
