continue implement training plan process.

--- a/app/views/feedbacks/new.html.erb
+++ b/app/views/feedbacks/new.html.erb
@@ -17,6 +17,7 @@
         <legend><%= @tp.title %></legend>
         <%= f.association :courses, :multiple => true, :collection => @tp.courses %>
         <%= f.input :note, :as => :text, :input_html => { :cols => 50, :rows => 3 }, :placeholder => '对培训计划有什么建议或者意见，请留言...' %>
+        <%= f.hidden_field :user_id, :value => current_user.id %>
         <div class="form-actions">
         <%= f.button :submit, '提交培训反馈', :class => "btn-primary"  %>
         </div>
