--- a/app/views/training_plans/show.html.erb
+++ b/app/views/training_plans/show.html.erb
@@ -64,8 +64,8 @@
   </div>
   <div id="dashboard-right" class="span4">
     <div class="well">
-      <a href="<%= new_user_path %>" class="btn btn-primary"><i class="iconfa-plus icon-white"></i><%= t('users.all.create')%></a>
-      <a href="#myModal" data-toggle="modal" class="btn btn-warning"><i class="iconfa-download-alt icon-white"></i> <%= t('users.all.export') %></a>
+      <a href="<%= new_user_path %>" class="btn btn-primary"><i class="iconfa-edit icon-white"></i> 修改培训计划</a>
+      <a href="#myModal" data-toggle="modal" class="btn btn-warning"><i class="iconfa-download-alt icon-white"></i> 导出培训计划</a>
     </div>
   </div>
 </div>
