--- a/app/views/training_plans/new.html.erb
+++ b/app/views/training_plans/new.html.erb
@@ -26,7 +26,7 @@
         <%= f.association :users, :collection => User.staff, :multiple => true %>
         <%= f.hidden_field :creator_id, :value => current_user.id %>
         <div class="form-actions">
-        <%= f.button :submit, '创建新培训课程', :class => "btn-primary"  %>
+        <%= f.button :submit, '创建培训计划', :class => "btn-primary"  %>
         </div>
       <% end %>
     </div>
