--- a/app/views/training_plans/started.html.erb
+++ b/app/views/training_plans/started.html.erb
@@ -16,18 +16,7 @@
         创建于<%= distance_of_time_in_words_to_now(@tp.created_at) + t("course.all.ago") %>&middot;
         培训员工（<%= @tp.users.count %>）&middot;
         必修课程（<%= @tp.required_courses.count %>）&middot;
-        选修课程（<%= @tp.optional_courses.count %>）&middot;
-      </div>
-    </div>
-
-    <div class="well">
-      <div>
-        <h4 class="pull-left">培训员工反馈进度</h4>
-        <div class="progress progress-info pull-right" style="width: 60%;">
-          <div style="width: <%= @tp.feedbacks.count*100/@tp.users.count %>%" class="bar">
-            <%= @tp.feedbacks.count.to_s + '/' + @tp.users.count.to_s %>
-          </div>
-        </div>
+        选修课程（<%= @tp.optional_courses.count %>)
       </div>
     </div>
 
@@ -64,7 +53,7 @@
   </div>
   <div id="dashboard-right" class="span4">
     <div class="well">
-      <a href="<%= new_user_path %>" class="btn btn-primary"><i class="iconfa-plus icon-white"></i> 修改培训计划</a>
+      <a href="<%= new_user_path %>" class="btn btn-primary"><i class="iconfa-plus icon-white"></i><%= t('users.all.create')%></a>
       <a href="#myModal" data-toggle="modal" class="btn btn-warning"><i class="iconfa-download-alt icon-white"></i> <%= t('users.all.export') %></a>
     </div>
   </div>
