--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -22,6 +22,17 @@
 
 <div class="row-fluid">
   <div id="dashboard-left" class="span8">
+    <% if current_user.notifications.count > 0 %>
+    <div class="alert alert-info alert-block">
+      <button data-dismiss="alert" class="close" type="button">&times;</button>
+      <h4>最新消息：</h4>
+      <ul class='notificaiton-list'>
+        <% current_user.notifications.each do |n| %>
+        <li><%= link_to notice_description(n), notice_url(n) %></li>
+        <% end %>
+      </ul>
+    </div><!--notifications-->
+    <% end %>
     <% if current_user.pending_todos.count > 0 %>
     <h4 class="widgettitle"><span class="iconfa-check"></span> 待办事项（<%= current_user.pending_todos.count %>）</h4>
     <div class="widgetcontent nopadding">
