Add state machine for course class.

--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -60,7 +60,7 @@
         <% tp.course_for_user(current_user).each do |c| %>
         <li class='training-user-course'>
           <%= link_to c.title, course_path(c) %>
-          <span class='course-state'><%= user_course_state(c) %>
+          <span class='course-state'><%= user_course_state(current_user, c) %></span>
         </li>
         <% end %>
       <% end %>
