--- a/app/views/shared/_leftmenu.html.erb
+++ b/app/views/shared/_leftmenu.html.erb
@@ -2,55 +2,55 @@
   <ul class="nav nav-tabs nav-stacked">
     <li class="nav-header"><%= t('menu.navigator') %></li>
       <% unless current_user.admin? %>
-      <li class="<%= category == 'user' ? "dropdown active" : "dropdown" %>"><a href=""><span class="iconfa-plus"></span> <%= t('menu.user.action') %></a>
+      <li class="<%= category == 'user' ? "dropdown active" : "dropdown" %>"><a href=""><span class="iconfa-home"></span><%= t('menu.user.action') %></a>
       <ul style="<%= "display: block" if category == 'user' %>">
-        <li class="<%= "active" if active == 'home' %>"><a href="<%= dashboard_user_path(current_user) %>"><span class="iconfa-home"></span> <%= t('menu.user.home') %></a></li>
-        <li class="<%= "active" if active == 'profile' %>"><a href="<%= user_path(current_user) %>"><span class="iconfa-file"></span> <%= t('menu.user.myprofile') %></a></li>
-        <li class="<%= "active" if active == 'user_courses' %>"><a href="<%= user_courses_path(current_user) %>"><span class="iconfa-book"></span> <%= t('menu.user.mycourse') %></a></li>
-        <li class="<%= "active" if active == 'courses' %>"><a href="#myModal" data-toggle="modal"><span class="iconfa-bookmark-empty"></span> 我的博客</a></li>
-        <li class="<%= "active" if active == 'member' %>"><a href="#myModal" data-toggle="modal"><span class="iconfa-question-sign"></span> 我的问答</a></li>
-        <li class="<%= "active" if active == 'member' %>"><a href="#myModal" data-toggle="modal"><span class="iconfa-briefcase"></span> 我的案例</a></li>
-        <li class="<%= "active" if active == 'member' %>"><a href="#myModal" data-toggle="modal"><span class="iconfa-upload"></span> 我的成长记录</a></li>
-        <li class="<%= "active" if active == 'member' %>"><a href="#myModal" data-toggle="modal"><span class="iconfa-trophy"></span> 我的荣誉</a></li>
+        <li class="<%= "active" if active == 'home' %>"><a href="<%= dashboard_user_path(current_user) %>"><%= t('menu.user.home') %></a></li>
+        <li class="<%= "active" if active == 'profile' %>"><a href="<%= user_path(current_user) %>"><%= t('menu.user.myprofile') %></a></li>
+        <li class="<%= "active" if active == 'user_courses' %>"><a href="<%= user_courses_path(current_user) %>"><%= t('menu.user.mycourse') %></a></li>
+        <li class="<%= "active" if active == 'courses' %>"><a href="#myModal" data-toggle="modal">我的博客</a></li>
+        <li class="<%= "active" if active == 'member' %>"><a href="#myModal" data-toggle="modal">我的问答</a></li>
+        <li class="<%= "active" if active == 'member' %>"><a href="#myModal" data-toggle="modal">我的案例</a></li>
+        <li class="<%= "active" if active == 'member' %>"><a href="#myModal" data-toggle="modal">我的成长记录</a></li>
+        <li class="<%= "active" if active == 'member' %>"><a href="#myModal" data-toggle="modal">我的荣誉</a></li>
       </ul>
       </li>
       
       <% if current_user.teach_courses.size > 0 %>
-      <li class="<%= category == 'teacher' ? "dropdown active" : "dropdown" %>"><a href=""><span class="iconfa-plus"></span> <%= t('menu.teacher.action') %></a>
+      <li class="<%= category == 'teacher' ? "dropdown active" : "dropdown" %>"><a href=""><span class="iconfa-rss"></span><%= t('menu.teacher.action') %></a>
       <ul style="<%= "display: block" if category == 'teacher' %>">
-        <li class="<%= "active" if active == 'member' %>"><a href="#myModal" data-toggle="modal"><span class="iconfa-group"></span> 我的课程管理</a></li>
-        <li class="<%= "active" if active == 'member' %>"><a href="#myModal" data-toggle="modal"><span class="iconfa-rss"></span> 我的班级管理</a></li>
-        <li class="<%= "active" if active == 'member' %>"><a href="#myModal" data-toggle="modal"><span class="iconfa-certificate"></span> 我的讲师生涯</a></li>
+        <li class="<%= "active" if active == 'member' %>"><a href="#myModal" data-toggle="modal">我的课程管理</a></li>
+        <li class="<%= "active" if active == 'member' %>"><a href="#myModal" data-toggle="modal">我的班级管理</a></li>
+        <li class="<%= "active" if active == 'member' %>"><a href="#myModal" data-toggle="modal">我的讲师生涯</a></li>
       </ul>
       </li>
       <% end %>
 
       <% if current_user.subordinates.size > 0 %>  
-      <li class="<%= category == 'manager' ? "dropdown active" : "dropdown" %>"><a href=""><span class="iconfa-plus"></span> <%= t('menu.manager.action') %></a>
+      <li class="<%= category == 'manager' ? "dropdown active" : "dropdown" %>"><a href=""><span class="iconfa-group"></span><%= t('menu.manager.action') %></a>
       <ul style="<%= "display: block" if category == 'manager' %>">
-        <li class="<%= "active" if active == 'member' %>"><a href="#myModal" data-toggle="modal"><span class="iconfa-group"></span> <%= t('menu.manager.members') %></a></li>
-        <li class="<%= "active" if active == 'member' %>"><a href="#myModal" data-toggle="modal"><span class="iconfa-tasks"></span> 团队学习记录</a></li>
-        <li class="<%= "active" if active == 'assess' %>"><a href="<%= mgr_assessments_user_path(current_user) %>"><span class="iconfa-check"></span> 团队认证评估</a></li>
+        <li class="<%= "active" if active == 'member' %>"><a href="#myModal" data-toggle="modal"><%= t('menu.manager.members') %></a></li>
+        <li class="<%= "active" if active == 'member' %>"><a href="#myModal" data-toggle="modal">团队学习记录</a></li>
+        <li class="<%= "active" if active == 'assess' %>"><a href="<%= mgr_assessments_user_path(current_user) %>">团队认证评估</a></li>
       </ul>
       </li>
       <% end %>
       <% end %>
       
       <% if current_user.admin? %>
-      <li class="<%= category == 'admin' ? "dropdown active" : "dropdown" %>"><a href=""><span class="iconfa-plus"></span> <%= t('menu.admin.action') %></a>
+      <li class="<%= category == 'admin' ? "dropdown active" : "dropdown" %>"><a href=""><span class="iconfa-home"></span><%= t('menu.admin.action') %></a>
       <ul style="<%= "display: block" if category == 'admin' %>">
-        <li class="<%= "active" if active == 'dashboard' %>"><a href="<%= admin_dashboard_path %>"><span class="iconfa-dashboard"></span> <%= t('menu.admin.dashboard') %></a></li>
-        <li class="<%= "active" if active == 'users' %>"><a href="<%= admin_manage_users_path %>"><span class="iconfa-group"></span> <%= t('menu.admin.users') %></a></li>
-        <li class="<%= "active" if active == 'competency' %>"><a href="<%= admin_manage_competency_path %>"><span class="iconfa-sitemap"></span> <%= t('menu.admin.competency') %></a></li>
-        <li class="<%= "active" if active == 'courses' %>"><a href="<%= admin_manage_course_path %>"><span class="iconfa-folder-open"></span> <%= t('menu.admin.course') %></a></li>
-        <li class="<%= "active" if active == 'positions' %>"><a href="<%= admin_manage_position_path %>"><span class="iconfa-reorder"></span> <%= t('menu.admin.position') %></a></li>
-        <li class="<%= "active" if active == 'exam' %>"><a href="<%= examinations_path %>"><span class="iconfa-certificate"></span> 考试管理</a></li>
-        <li class="<%= "active" if active == 'teacher' %>"><a href="#myModal" data-toggle="modal"><span class="iconfa-user"></span> 讲师管理</a></li>
-        <li class="<%= "active" if active == 'plan' %>"><a href="<%= training_plans_path %>" data-toggle="modal"><span class="iconfa-calendar"></span> 培训计划管理</a></li>
-        <li class="<%= "active" if active == 'assessments' %>"><a href="#myModal" data-toggle="modal"><span class="iconfa-signal"></span> 能力评估管理</a></li>
-        <li class="<%= "active" if active == 'knowledage' %>"><a href="<%= knowledge_path %>"><span class="iconfa-rss"></span> 社区管理</a></li>
-        <li class="<%= "active" if active == 'datamining' %>"><a href="<%= datamining_path %>"><span class="iconfa-bar-chart"></span> 统计中心</a></li>
-        <li class="<%= "active" if active == 'assessments' %>"><a href="#myModal" data-toggle="modal"><span class="iconfa-check"></span> 权限管理</a></li>
+        <li class="<%= "active" if active == 'dashboard' %>"><a href="<%= admin_dashboard_path %>"><%= t('menu.admin.dashboard') %></a></li>
+        <li class="<%= "active" if active == 'users' %>"><a href="<%= admin_manage_users_path %>"><%= t('menu.admin.users') %></a></li>
+        <li class="<%= "active" if active == 'competency' %>"><a href="<%= admin_manage_competency_path %>"><%= t('menu.admin.competency') %></a></li>
+        <li class="<%= "active" if active == 'courses' %>"><a href="<%= admin_manage_course_path %>"><%= t('menu.admin.course') %></a></li>
+        <li class="<%= "active" if active == 'positions' %>"><a href="<%= admin_manage_position_path %>"><%= t('menu.admin.position') %></a></li>
+        <li class="<%= "active" if active == 'exam' %>"><a href="<%= examinations_path %>">考试管理</a></li>
+        <li class="<%= "active" if active == 'teacher' %>"><a href="#myModal" data-toggle="modal">讲师管理</a></li>
+        <li class="<%= "active" if active == 'plan' %>"><a href="<%= training_plans_path %>" data-toggle="modal">培训计划管理</a></li>
+        <li class="<%= "active" if active == 'assessments' %>"><a href="#myModal" data-toggle="modal">能力评估管理</a></li>
+        <li class="<%= "active" if active == 'knowledage' %>"><a href="<%= knowledge_path %>">社区管理</a></li>
+        <li class="<%= "active" if active == 'datamining' %>"><a href="<%= datamining_path %>">统计中心</a></li>
+        <li class="<%= "active" if active == 'assessments' %>"><a href="#myModal" data-toggle="modal">权限管理</a></li>
       </ul>
       </li>
       <% end %>
