add model examination relations

--- a/app/views/examinations/index.html.erb
+++ b/app/views/examinations/index.html.erb
@@ -38,7 +38,7 @@
     <h3 class="subtitle">管理考试</h3>
     <div class="divider15"></div>
     <div class="well">
-      <a href="#myModal" data-toggle="modal" class="btn btn-primary"><i class="iconfa-plus icon-white"></i> 创建新考试</a>
+      <a href="<%= new_examination_path %>" data-toggle="modal" class="btn btn-primary"><i class="iconfa-plus icon-white"></i> 创建新考试</a>
     </div>
     <% end %>
   </div>
