--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -19,6 +19,7 @@
     <div class="widgetcontent">
       <div class="divider15"></div>
       <%= simple_form_for [@exam, @question], :html => {:class => 'form-horizontal'} do |f| %>
+        <%= f.collection_select :question_type_str, [[:choice, "选择题"], [:judgement, "判断题"], [:dialogical, "简答题"]], :first, :last%>
         <%= f.input :qdata, :as => :text, :label => "考试标题：", :hint => "支持markdown格式标记", :input_html => { :class => "span5", :cols => 50, :rows => 8 } %>
         <%= f.input :answer, :label => "正确答案：", :input_html => { :class => "span5" } %>
         <div class="form-actions">
