--- a/app/views/examinations/index.html.erb
+++ b/app/views/examinations/index.html.erb
@@ -16,20 +16,28 @@
     <h4 class="widgettitle">所有考试（<%= @exams.size %>）</h4>
     <% if @exams.size > 0 %>
     <div class="widgetcontent nopadding">
-      <ul class="exam-list">
+      <table class="table responsive tp-list">
         <% @exams.each do |e| %>
-        <li>
-          <%= e.title %>
-          <span class="pull-right">
+        <tr>
+          <td><span class="label label-info"><%= exam_progress(e.state) %></span></td>
+          <td>
             <% if current_user.admin? %>
-            <%= link_to "<i class='iconfa-edit'></i> 查看详情".html_safe, examination_path(e), :class => "btn btn-warning" %>
+              <%= link_to e.title, examination_path(e) %>
+              <span>参考总人数: <%=e.users.size %></span>
+              <span>考试日期：<%= e.published_at ? e.published_at.to_date : "待定 " %></span>
+              <span>结束日期：<%= e.deadline ? e.deadline.to_date : "待定" %></span>
+              <span><%= link_to exam_state(e.state), exam_state_action(e, current_user), :class => "btn btn-warning" %></span>
             <% else %>
-            <%= link_to "<i class='iconfa-check'></i> 报名考试".html_safe, '#myModal', :class => "btn btn-warning disabled", "data-toggle" => "modal" %>
+              <%= link_to "<i class='iconfa-check'></i> 报名考试".html_safe, '#myModal', :class => "btn btn-warning disabled", "data-toggle" => "modal" %>
             <% end %>
-          </span>
-        </li>
+          </td>
+        </tr>
         <% end %>
-      </ul>
+      </table>
+    </div>
+    <% else %>
+    <div class='widgetcontent'>
+      <p>还没有任何考试安排</p>
     </div>
     <% end %>
   </div>
