--- a/app/views/examinations/new.html.erb
+++ b/app/views/examinations/new.html.erb
@@ -18,8 +18,13 @@
     <div class="widgetcontent">
       <div class="divider15"></div>
       <%= simple_form_for(@exam, :html => {:class => 'form-horizontal', :multipart => true}) do |f| %>
-        <%= f.input :title, :label => "考试标题：", :input_html => { :class => "span5" } %>
-        <%= f.input :deadline, :as => :date,
+        <%= f.input :title, :label => "考试标题:", :input_html => { :class => "span5" } %>
+        <%= f.input :published_at, :label => "考试日期:", :as => :date,
+        :start_year => Date.today.year,
+        :end_year => Date.today.year + 10,
+        :order => [:year, :month, :day]
+        %>
+        <%= f.input :deadline, :label => "截止日期:", :as => :date,
         :start_year => Date.today.year,
         :end_year => Date.today.year + 10,
         :order => [:year, :month, :day]
