--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -44,7 +44,7 @@
     <div class="class-course">
       <%= image_tag course_cover_path(@course, :large), :class => "pull-left" %>
       <div class="course-banner">
-        <h3><%= @course.title %><span class='label label-info course-state'><%= @course.state %></span></h3>
+        <h3><%= @course.title %></h3>
         <ul>
           <li>目标学员：<%= @course.audience %></li>
           <li>授课老师：<%= @course.teacher.name %></li>
@@ -69,25 +69,29 @@
     <div class="divider15"></div>
     <% end %>
 
+    <h3 class="subtitle">目前开设的班级：</h3>
     <% if @course.course_classes.active.count > 0 %>
+    <div class='well nopadding'>
     <ul class='course-active-class-list'>
       <% @course.course_classes.active.each do |c| %>
       <li>
-        班级老师：
+        <%= link_to '班级-' + c.id.to_s, class_path(c) %> :
+        老师：
         <% c.teachers.each do |t| %>
-        <span><%= t.name %></span>
+        <span><%= link_to t.name, user_path(t) %></span>
         <% end %>
         助教：
         <% c.assistents.each do |a| %>
-        <span><%= a.name %></span>
+        <span><%= link_to a.name, user_path(a) %></span>
         <% end %>
         <%= form_for(c, :url => eroll_class_path(c), html: { :method => :put }) do |f| %>
         <%= f.hidden_field :user_id, :value => current_user.id %>
-        <%= f.submit "报名", :class => "btn btn-mini btn-primary" %>
+        <%= f.submit "点击报名", :class => "btn btn-small btn-primary pull-right" %>
         <% end %>
       </li>
       <% end %>
     </ul>
+    </div>
     <% end %>
 
     <div class="tabbedwidget tab-primary">
